[gd_scene load_steps=2 format=3 uid="uid://dlpi5e8smkd5"]

[ext_resource type="Script" path="res://scripts/pauseMenu.gd" id="1_1k21d"]

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1k21d")

[node name="Menu" type="MenuButton" parent="."]
layout_mode = 0
offset_right = 53.0
offset_bottom = 31.0
text = "Menu"

[node name="Resume" type="MenuButton" parent="."]
process_mode = 2
layout_mode = 0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 61.0
text = "Resume"

[node name="Exit" type="MenuButton" parent="."]
process_mode = 2
layout_mode = 0
offset_top = 59.0
offset_right = 38.0
offset_bottom = 90.0
text = "Exit"

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
